--- a/api/package.json
+++ b/api/package.json
@@ -15,14 +15,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
-    "uuid": "^9.0.1"
+    "morgan": "^1.10.0"
   }
 }
