--- a/api/.env.template
+++ b/api/.env.template
@@ -1,6 +1,6 @@
 
-PORT=3000;
-MONGODB_URI='mongodb://localhost:27017/gymcode';
+PORT=3000
+MONGODB_URI='mongodb://localhost:27017/gymcode'
 JWT_SECRET='123'
 CLOUD_NAME
 API_KEY
