Routines and exercises model, cors

--- a/api/.env.template
+++ b/api/.env.template
@@ -2,6 +2,7 @@
 PORT=3000
 MONGODB_URI='mongodb://localhost:27017/gymcode'
 JWT_SECRET='123'
+CORS_ORIGIN=http://localhost:5173
 CLOUD_NAME
 API_KEY
 API_SECRET
